/*
 * Copyright Â© 2023- Gimlet Labs, Inc.
 * All Rights Reserved.
 *
 * NOTICE:  All information contained herein is, and remains
 * the property of Gimlet Labs, Inc. and its suppliers,
 * if any.  The intellectual and technical concepts contained
 * herein are proprietary to Gimlet Labs, Inc. and its suppliers and
 * may be covered by U.S. and Foreign Patents, patents in process,
 * and are protected by trade secret or copyright law. Dissemination
 * of this information or reproduction of this material is strictly
 * forbidden unless prior written permission is obtained from
 * Gimlet Labs, Inc.
 *
 * SPDX-License-Identifier: Proprietary
 */

syntax = "proto3";

package gml.gem.calculators.openvino.optionspb;

option go_package = "gimletlabs.ai/gimlet/src/gem/calculators/plugin/openvino/optionspb;optionspb";

message OpenVinoExecuteCalculatorOptions {
  // For now we don't handle dynamic shapes so each tensor's shape needs to be explicity specified.
  repeated TensorShape input_tensor_shape = 1;
}

message TensorShape {
  repeated int32 dim = 1;
}
